--- a/Sites/Dashboard/public/css/menu.css
+++ b/Sites/Dashboard/public/css/menu.css
@@ -153,10 +153,10 @@ ul.links-list li {
 }
 
 .back-icons-menu ul.links-list li {
-    width: 5vw;
-    height: 5vw;
+    width: 3vw;
+    height: 3vw;
 
-    margin: 10px 10px;
+    margin: 5px 10px;
 
     border-radius: 100%;
 
@@ -188,7 +188,7 @@ p.link {
 .fa-chart-line,
 .fa-file-contract,
 .fa-chalkboard-teacher {
-    font-size: 25px;
+    font-size: 15px;
     margin: 15px 0px 15px 0px;
 }
 
@@ -198,7 +198,7 @@ p.link {
 
     margin-right: 50px;
 
-    font-size: 20px;
+    font-size: 1.5vw;
 }
 
 ul.links-list .icons-links a {
@@ -218,8 +218,8 @@ ul.links-list .icons-links a {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    
-    font-size: 1.5vw;
+
+    margin-top: 10px;
 }
 .contact-list__contact {
     margin-bottom: 10px;
@@ -262,7 +262,7 @@ ul.links-list .icons-links a {
     
     color: #ffffff;
     font-family: Arial;
-    font-size: 15px;
+    font-size: 10px;
     font-weight: bold;
 
     padding: 6px 24px;
