--- a/Sites/site_institucional/css/sobre.css
+++ b/Sites/site_institucional/css/sobre.css
@@ -48,7 +48,7 @@
 
 .info .aboutUs {
     width: 100%;
-    margin: 30px 0px 20px 0px;
+    margin: 30px 0px 30px 0px;
 }
 
 .info .aboutUs h1 {
@@ -78,7 +78,7 @@
 Missão  Visão e Valores
 */
 
-.mvv {
+/* .mvv {
     margin: 70px 0px;
     display: flex;
     justify-content: space-around;
@@ -150,6 +150,53 @@ Missão  Visão e Valores
 .mvv .visao .txt_mvv {
     text-align: justify;
     width: 71%;
+} */
+
+.container-card {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 90%;
+    min-height: 100vh;
+    height: auto;
+    align-items: center;
+    justify-content: space-around;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.container-card .card {
+    flex: 1 1 200px;
+    margin: 10px 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    transition: all 0.5s;
+    min-height: 455px;
+    height: auto;
+    padding: 5px;
+
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 45px 0px, rgba(0, 0, 0, 0.1) 0px 61px 67px 0px;
+}
+
+
+.container-card .card:hover {
+    transform: scale(1.1);
+    box-shadow: var(--cor-secundaria) 0px 2px 45px 0px, var(--cor-secundaria) 0px 25px 30px 0px;
+}
+
+.imgCard {
+    width: 100%;
+    height: 200px;
+}
+
+.card .read h1 {
+    color: black;
+    margin: 10px auto 10px auto;
+    font-weight: 500;
+}
+
+.card .read p {
+    color: black;
 }
 
 /*
@@ -203,6 +250,7 @@ Time MIND6
 #cesarAjuste {
     width: 217px;
 }
+
 /*Final de Ajuste*/
 
 .card h1 {
