--- a/Sites/site_institucional/css/controlTec.css
+++ b/Sites/site_institucional/css/controlTec.css
@@ -51,18 +51,17 @@ body {
 #controltec h1 {
     text-align: center;
     font-size: 48px;
+    width: 100%;
 
-    border-bottom: solid 5px black;
+    background-color: var(--cor-terciaria);
+    color: #ffffff;
 
-    color: #000000;
-    /* text-shadow: 2px 2px 2px var(--cor-secundaria); */
-
-    margin: 20px;
+    margin-top: 20px;
 }
 
 .cards img {
     width: 400px;
-    margin: 20px;
+    margin-top: 50px;
 }
 
 .cards {
@@ -85,7 +84,7 @@ body {
 }
 
 .g-1 p {
-    margin: 50px 10px;
+    margin: 70px 10px;
     text-align: justify;
     font-size: 20px;
 }
@@ -95,12 +94,13 @@ body {
     text-align: center;
     font-size: 48px;
 
-    border-bottom: solid 5px black;
+    /* border-bottom: solid 5px black; */
+    background-color: var(--cor-terciaria);
+    width: 100%;
 
-    color: #000000;
+
+    color: #ffffff;
     /* text-shadow: 2px 2px 2px var(--cor-secundaria); */
-
-    margin: 30px 20px;
 }
 
 #controltecVantagens h2 {
