--- a/Sites/site_institucional/css/contato.css
+++ b/Sites/site_institucional/css/contato.css
@@ -1,13 +1,15 @@
 :root {
     --cor-principal: #0f0fd8;
-    --cor-secundaria: #232323;
-    --cor-terciaria: #8080ffff;
-    --cor-quartenaria: #0066ffff;
+    --cor-secundaria: #1B2431;
+    --cor-terciaria: #016795;
+    --cor-quartenaria: #1E488F;
 }
+
 body {
-    background-color: #4F4F4F;
-    color: white;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
 }
+
 .container_form {
     display: flex;
     align-items: center;
@@ -100,7 +102,7 @@ form select {
 form textarea {
     font-size: 16px;
     height: 100%;
-    max-width: 535px;   
+    max-width: 535px;
     outline: none;
     border-color: var(--cor-quartenaria);
     border-radius: 4px;
@@ -148,7 +150,7 @@ form button {
     font-weight: bold;
     border: 3px solid var(--cor-quartenaria);
     position: relative;
-    transition-duration:.5s;
+    transition-duration: .5s;
     border-radius: 8px;
     cursor: pointer;
     color: var(--cor-quartenaria);
@@ -169,11 +171,13 @@ form button::before {
     top: 0;
     background: var(--cor-quartenaria);
 }
+
 form button:hover {
     transform: scale(1.2);
     border: 3px solid #000;
     color: #000;
 }
+
 form button:hover::before {
     transition-duration: .5s;
     height: 4vh;
