--- a/Sites/site_institucional/css/index.css
+++ b/Sites/site_institucional/css/index.css
@@ -15,7 +15,7 @@ body {
     background: url('../img/laboratorio.jpg') center top no-repeat;
     background-size: 100%;
     background-attachment: fixed;
-    height: 658px;
+    height: 665px;
 }
 
 .fbody {
@@ -23,11 +23,9 @@ body {
     background-size: cover;
 }
 
-
-
 .laboratorio div {
     background: rgba(0, 0, 0, 0.5);
-    height: 518px;
+    height: 525px;
     width: 100%;
     text-align: center;
 }
@@ -51,13 +49,29 @@ body {
     margin-top: 60px;
     border: none;
     cursor: pointer;
-    background-color: var(--cor-principal);
+    background-color: var(--cor-terciaria);
     font-size: 20px;
     border-radius: 10px;
     font-weight: bold;
 }
 
-.content {
+#home h1 {
+    /* text-align: center; */
+    text-transform: uppercase;
+    font-size: 30px;
+    color: rgb(0, 0, 0);
+    margin: 20px 15px;
+}
+
+.cardHome {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    height: auto;
+    margin: 20px;
+}
+
+/* .content {
     margin-bottom: 5%;
     margin-top: 3%;
 }
@@ -69,10 +83,6 @@ body {
     color: var(--cor-secundaria);
     font-size: 50px;
 }
-
-/* #im1{
-    transform: scaleX(1);
-} */
 
 .carrosel div {
     margin-left: 2.5%;
@@ -159,4 +169,4 @@ body {
     text-align: center;
     max-width: 33%;
     margin-left: 34%;
-}
+} */
