--- a/Sites/Dashboard_new/css/index.css
+++ b/Sites/Dashboard_new/css/index.css
@@ -3,3 +3,20 @@ body {
     padding: 0;
     background-color: #ededed;
 }
+
+.showcase{
+    width: 100%;
+    height: 750px;
+}
+
+.container{
+    width: 100%;
+    height: 400px;
+    text-align: center;
+}
+
+.container img{
+    width: 400px;
+    opacity: 0.5;
+    margin-top: 150px;
+}
