--- a/Sites/Dashboard_new/css/index.css
+++ b/Sites/Dashboard_new/css/index.css
@@ -1,6 +1,10 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
+body, html{
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    width: 100%;
+    height: 100%;
     background-color: #ededed;
 }
 
