--- a/Sites/Dashboard_new/css/profile.css
+++ b/Sites/Dashboard_new/css/profile.css
@@ -1,6 +1,10 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
+body, html{
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    width: 100%;
+    height: 100%;
     background-color: #ededed;
 }
 
@@ -81,6 +85,11 @@ body {
     cursor: pointer;
 }
 
+.fa-moon:hover{
+    background: #f8f8f8;
+    color: rgb(201, 201, 201);
+}
+
 .fa-lock{
     background: #ececec;
     font-size: 59px;
@@ -88,6 +97,11 @@ body {
     padding: 15px;
     border-radius: 17px;
     cursor: pointer;
+}
+
+.fa-lock:hover{
+    background: #f8f8f8;
+    color: rgb(201, 201, 201);
 }
 
 .fa-power-off{
@@ -99,16 +113,16 @@ body {
     cursor: pointer;
 }
 
+.fa-power-off:hover{
+    background: #fc5a5a;
+}
+
 .div-configuracao__div{
     width: 96%;
     height: 88px;
     display: flex;
     margin-bottom: 30px;
     margin-left: 17px;
-}
-
-#{
-    background-color: gray;
 }
 
 .div-configuracao__spn{
