--- a/Sites/Dashboard_new/css/visaoMaquina.css
+++ b/Sites/Dashboard_new/css/visaoMaquina.css
@@ -15,7 +15,7 @@ body, html{
 
 .container{
     width: 100%;
-    height: 800px;
+    height: 1200px;
 }
 
 #container__spn-titulo{
@@ -61,7 +61,7 @@ body, html{
 
 .container-graficos{
     width: 99%;
-    height: 700px;
+    height: 260px;
     display: flex;
     border: rgb(163, 163, 163) 1px solid;
     padding-top: 50px;
@@ -111,11 +111,21 @@ body, html{
 }
 
 #container-graficos__div-mediaCpu{
-    width: 90%;
-    height: 250px;
+    width: 95%;
+    height: 280px;
 }
 
 #container-graficos__div-tempCpu{
-    width: 90%;
-    height: 250px;
+    width: 95%;
+    height: 280px;
+    float: right;
+}
+
+.container-graficos-trabalhados{
+    width: 99%;
+    height: 500px;
+    display: flex;
+    border: rgb(163, 163, 163) 1px solid;
+    margin: 100px 0 40px 7px;
+    padding-top: 50px;
 }
