--- a/Sites/Dashboard_new/public/css/visaoMaquina.css
+++ b/Sites/Dashboard_new/public/css/visaoMaquina.css
@@ -10,12 +10,12 @@ body, html{
 
 .showcase-conteudo{
     width: 100%;
-    height: 800px;
+    max-height: 1200px;
 }
 
 .container{
     width: 100%;
-    height: 1200px;
+    max-height: 1200px;
 }
 
 #container__spn-titulo{
@@ -31,9 +31,9 @@ body, html{
 }
 
 #container__div-pesquisa{
-    width: 90%;
+    width: 87%;
     margin-top: 50px;
-    margin-left: 100px;
+    margin-left: 156px;
 }
 
 #container__div-pesquisa span{
@@ -52,6 +52,11 @@ body, html{
     background-color: #0b44b5;
     border: none;
     font-weight: bold;
+    cursor: pointer;
+}
+
+#div-pesquisa__btn-pesquisar:hover{
+    background-color: #1053da;
 }
 
 
@@ -128,4 +133,55 @@ body, html{
     border: rgb(163, 163, 163) 1px solid;
     margin: 100px 0 40px 7px;
     padding-top: 50px;
+}
+
+
+
+
+/* ------------------ Lista de Máquinas ------------------- */
+
+
+.container__div-lista {
+    height: 80vh;
+    width: 80%;
+    background-color: white;
+    margin: 100px 0 0 156px;
+    overflow-y: scroll;
+    min-width: 300px;
+}
+
+.div-lista__table-listaMaquinas {
+    border-collapse: collapse;
+    border-spacing: 5px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+th {
+    text-align: center;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    padding: 0;
+    width: 10px!important;
+}
+
+td,
+th {
+    padding: 8px;
+    border: 2px solid black;
+}
+tr{
+    text-align: center;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+@media (max-width: 868px) {
+    .machines__reports__selectors {
+        flex-direction: column;
+        justify-content: space-around;
+        height: 7vh;
+    }
 }
