--- a/Sites/Dashboard_new/public/css/visaoMaquina.css
+++ b/Sites/Dashboard_new/public/css/visaoMaquina.css
@@ -66,56 +66,58 @@ body, html{
 
 .container-graficos{
     width: 99%;
-    height: 260px;
+    height: 300px;
     display: flex;
     border: rgb(163, 163, 163) 1px solid;
-    padding-top: 50px;
+
     margin: 100px 0 40px 7px;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .container-graficos__div-configuracao{
     background-color: white;
     border: rgb(51, 51, 51) 1px solid;
-    
+    height: 250px;
+}
+
+.div-configuracao__span-uso {
+    margin-bottom: 30px;
+    font-weight: bold;
 }
 
 #container-graficos__div-disponibilidade{
     width: 18%;
-    height: 200px;
     border-radius: 10px;
-    margin-right: 1%;
-    margin-left: 10px;
+
 }
 
 #container-graficos__div-usoDisco{
     width: 18%;
-    height: 200px;
     border-radius: 10px;
-    margin-right: 2%;
 
 }
 
 #container-graficos__div-usoCpu{
     width: 19%;
-    height: 200px;
     border-radius: 10px;
-    margin-right: 2%;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    flex-direction: column;
 }
+
 
 #container-graficos__div-usoRam{
     width: 18%;
-    height: 200px;
+
     border-radius: 10px;
-    margin-right: 1%;
+
 }
 
 #container-graficos__div-uptime{
     width: 18%;
-    height: 200px;
+
     border-radius: 10px;
 }
 
@@ -154,10 +156,10 @@ body, html{
     max-height: 80vh;
     width: 80%;
     background-color: white;
-    margin: 100px 0 0 156px;
+    margin: 30px auto;
     overflow-y: scroll;
     min-width: 300px;
-    margin-bottom: 70px;
+    margin-bottom: 90px;
 }
 
 .div-lista__table-listaMaquinas {
