--- a/Sites/Dashboard_new/public/css/header.css
+++ b/Sites/Dashboard_new/public/css/header.css
@@ -5,6 +5,15 @@
     background-color: white;
     border-bottom: rgb(206, 206, 206) 1px solid;
 }
+body,
+html {
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    width: 100%;
+    height: 100%;
+    background-color: #ededed;
+}
 input, button, img {
     outline: none;
 }
