--- a/Sites/Dashboard_new/public/css/visaoGlobal.css
+++ b/Sites/Dashboard_new/public/css/visaoGlobal.css
@@ -39,6 +39,7 @@ body, html{
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: scroll;
 }
 
 #container-esquerda__b-nomeEscola{
@@ -61,6 +62,7 @@ body, html{
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: scroll;
 }
 
 .container-direita span{
